<resources>
    <string name="app_name">Salvaguarda da Capoeira</string>

    <string name="action_settings">Configurações</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">Salvaguarda da Capoeira - CE</string>
    <string name="title_activity_historia">História da Capoeria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_cadastrar_capoeirista">CadastrarCapoeirista</string>
    <string name="tab1">Capoeiristas</string>
    <string name="tab2">Grupos</string>
    <string name="tab3">Rodas</string>
    <string name="nome_do_capoeirista">Nome*</string>
    <string name="dataNascimento_do_capoeirista">Data de Nascimento*</string>
    <string name="sexo_do_capoeirista">Sexo*</string>
    <string name="cpf_do_capoeirista">CPF</string>
    <string name="rg_do_capoeirista">RG</string>
    <string name="telefone_do_capoeirista">Telefone</string>
    <string name="email_do_capoeirista">Email*</string>
    <string name="senha">Senha*</string>
    <string name="rsenha">Confirmar senha*</string>
    <string name="proximo">Próximo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="apelido_do_capoeirista">Apelido do Capoeira*</string>
    <string name="whatsapp_do_capoeirista">Whatsapp</string>
    <string name="graduacao_do_capoeirista">Graduação*</string>
    <string name="ano_da_do_capoeirista">Ano da graduação</string>
    <string name="grupo_do_capoeirista">Associação, grupo ou entidade*</string>
    <string name="estilo_do_capoeirista">Estilo*</string>
    <string name="nome_do_mestre">Nome do mestre*</string>
    <string name="apelido_do_mestre">Apelido do mestre*</string>
    <string name="graduacao_do_mestre">Graduação do mestre*</string>
    <string name="endereco_capoeirista">Endereço</string>
    <string name="title_activity_visualizar_cadastros">VisualizarCadastros</string>
    <string name="dados_pessoais">Capoeirista</string>
    <string name="dados_capoeirista">Dados de Capoeirista</string>
    <string name="alerta_campo_vazio">Preencha os campos corrretamente</string>
    <string name="alerta_senhas_incorretas">Senha não corresponde</string>
    <string name="alerta_email_cadastrado">Email já cadastrado</string>
    <string name="capoeirista">Capoeiristas</string>
    <string name="remover_foto">Remover foto</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_principal">Salvaguarda Da Capoeira</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nome_joao">João Santos</string>
    <string name="whatsapp_joao">(85)987235842</string>
    <string name="facebook_joao">JoaozZzzz</string>
    <string name="instagram_joao">\@joaoltj</string>
    <string name="gmail_joao">joaoltj09@gmail.com</string>

    <string name="desenvolvedores">Desenvolvimento</string>
    <string name="title_activity_testeeeeeeeeeeeeeeee">Testeeeeeeeeeeeeeeee</string>


    <string name="nome_do_grupo">Nome do Grupo*</string>
    <string name="nome_do_responsavel">Nome do Responsável*</string>
    <string name="mestre_do_grupo">Mestre do Grupo*</string>
    <string name="estado_do_grupo">Estado*</string>
    <string name="cidade_do_grupo">Cidade*</string>
    <string name="bairro_do_grupo">Bairro*</string>
    <string name="rua_do_grupo">Rua*</string>
    <string name="Complemento_do_grupo">Complemento</string>

    <string name="dia_da_semana_roda">Dia da Semana*</string>
    <string name="horario_roda">Horário*</string>
    <string name="nome_do_grupo_organizador_roda">Nome do Grupo Organizador*</string>
    <string name="nome_do_responsavel_roda">Nome do Responsável*</string>
    <string name="estado_do_roda">Estado*</string>
    <string name="cidade_do_roda">Cidade*</string>
    <string name="bairro_do_roda">Bairro*</string>
    <string name="rua_do_roda">Rua e Nº*</string>
    <string name="Complemento_do_roda">Complemento</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_adicionar_evento">Adicionar Evento</string>
    <string name="selecionar_imagem">Selecionar Imagem</string>
    <string name="descricao_evento">Descrição</string>
    <string name="eventos">Eventos</string>

</resources>
